# rust-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: aws.yaml  td.json
scripts/: db-down.sh  db-wipe.sh  db.sh  server.sh
sql/: create_tables.sql
src/: main.rs
terraform/: main.tf  repository.tf  variables.tf
