[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.33"
env_logger = "0.11.2"
hyper = "1.1.0"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
