[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
hyper = "1.1.0"
log = { version = "0.4.21", features = ["std"] }
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
